index ready yay

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <h3>Main Page</h3>
       
 <div id="stat" class="statement_text"> 
-  <a class="navbar-link" href="homepage.html">Home</a> &nbsp;
+  <a class="navbar-link" href="index.html">Home</a> &nbsp;
   <a class="navbar-link" href="videos.html"> Videos</a> &nbsp;
   <div class="dropdown">
     <a class="dropbtn" href="digitalart.html"> Digital Art</a> &nbsp;
