--- a/memories.html
+++ b/memories.html
@@ -56,7 +56,7 @@
   <header id="header" class="twelve columns">
       
 <div id="stat" class="statement_text"> 
-  <a class="navbar-link" href="homepage.html">Home</a> &nbsp;
+  <a class="navbar-link" href="index.html">Home</a> &nbsp;
   <a class="navbar-link" href="videos.html"> Videos</a> &nbsp;
   <div class="dropdown">
     <a class="dropbtn" href="digitalart.html"> Photoshop & Illustrator</a> &nbsp;
