--- a/videos.html
+++ b/videos.html
@@ -57,7 +57,7 @@
     <h3>Video Projects</h3>
       
 <div id="stat" class="statement_text"> 
-  <a class="navbar-link" href="homepage.html">Home</a> &nbsp;
+  <a class="navbar-link" href="index.html">Home</a> &nbsp;
   <a class="navbar-link" href="videos.html"> Videos</a> &nbsp;
   <div class="dropdown">
     <a class="dropbtn" href="digitalart.html"> Photoshop & Illustrator</a> &nbsp;
