Technical and Visual Improvements
Readjusted background, added more unique text colors to each page, and in progress of adding YT links!

--- a/about.html
+++ b/about.html
@@ -3,9 +3,8 @@
 <head>
 
 <style>
-  p {text-align: center;}
-  h5,h6 {text-align: center;}
-  h1 {font-size: 100px;}
+  h1,h5,h6 {text-align: center; color: rgb(255, 211, 145);}
+  h3{color:rgb(255, 211, 145)}
   #stat {
     background-color: rgb(83, 92, 255);
   }
@@ -19,7 +18,7 @@
     background-image: url("images/backgrounds/cherrybloss_back.png");
     background-repeat: repeat;
     background-attachment: fixed;
-    background-size: 850px 665px;
+    background-size: 950px 730px;
   }
 </style>
 
