--- a/digitalart.html
+++ b/digitalart.html
@@ -3,8 +3,9 @@
 <head>
 
 <style>
-  p {padding-left: 18px;}
-  h5 {padding-left: 18px;}
+  p {padding-left: 18px; color: #bff2ff;}
+  h5 {padding-left: 18px; color: #ffeecb;}
+  h3 {color:#bff2ff;}
   #stat {
     background-color: rgb(11, 76, 92);
   }
@@ -16,7 +17,7 @@
     background-image: url("images/backgrounds/auroranova_back.png");
     background-repeat: repeat;
     background-attachment: fixed;
-    background-size: 800px 665px;
+    background-size: 910px 730px;
   }
 </style>
 
@@ -153,7 +154,7 @@
    
   <!-- The column for artist statement and the link-->
 <div class="seven columns">    
-    <h5> <strong>Cats on Bubbles</strong> (2024) </h5> 
+    <h5 id="cats"> <strong>Cats on Bubbles</strong> (2024) </h5> 
 
 <p>
  
