Some video and pad stuffs
Experimenting with padding and added the videos and their thumbnails.

--- a/digitalart.html
+++ b/digitalart.html
@@ -4,7 +4,7 @@
 
 <style>
   p {padding-left: 18px; color: #bff2ff;}
-  h5 {padding-left: 18px; color: #ffeecb;}
+  h5 {padding-left: 18px; color: #ffeecb; padding-top: 30px;}
   h3 {color:#bff2ff;}
   #stat {
     background-color: rgb(11, 76, 92);
@@ -19,6 +19,7 @@
     background-attachment: fixed;
     background-size: 910px 730px;
   }
+  #pad {padding-top: 100px;}
 </style>
 
   <!-- Basic Page Needs –––––––––––––––––––––––––––––––––––––––––– -->
