--- a/digitalart.html
+++ b/digitalart.html
@@ -160,8 +160,40 @@
 <p>
  
   A content and happy cat floating on some colorful bubbles.
-  The bubbles were created in Blender as an introduction to lighting and reflections, and the cat was added in afterwards in Blender as a finishing touch.
-  It was fun using Blender as my first 3D modeling software and enjoyed experimenting to find the right mix of light and color.
+  This project was created in Blender as an introduction to lighting and reflections, and the cat was added in afterwards in Photoshop as a finishing touch.
+  It was fun testing experimenting with coloring and I think bubbles were a good choice to 
+
+   <br>
+ 
+
+    
+     </p> 
+</div>
+
+
+<!--////  End of row section-->
+</div>
+
+<!-- Start Row //// -->
+<div class="row section">
+
+      
+  <!-- The column for showing the image and the link-->
+ 
+ <div class="five columns" >
+ 
+ <a href="images/digitalart_images/kxFelinekindandDonut.png" > <img src="images/digitalart_images/kxFelinekindandDonut.png" width="400"/>   </a>
+ </div> 
+   
+  <!-- The column for artist statement and the link-->
+<div class="seven columns">    
+    <h5 id="cats"> <strong>Creation of Donut</strong> (2024) </h5> 
+
+<p>
+ 
+  The beautiful reunion of a cat and their beloved blender donut.
+  As my first blender project, I created the iconic donut model and decided to give it a little sparkly flare in Photoshop as well!
+  This was a fun introductory practice in Blender and was a lot of fun to make.
 
    <br>
  
