--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     background-attachment: fixed;
     background-size: 950px 730px;
   }
+  
 </style>
 
   <!-- Basic Page Needs –––––––––––––––––––––––––––––––––––––––––– -->
@@ -63,7 +64,7 @@
   <a class="navbar-link" href="videos.html"> Videos</a> &nbsp;
   <div class="dropdown">
     <a class="dropbtn" href="digitalart.html"> Digital Art</a> &nbsp;
-      <div class="dropdown-content">
+      <div id="stat" class="dropdown-content">
         <a href="digitalart.html">Digital Works</a>
         <a href="memories.html">Childhood.exe</a>
         <a href="sdm.html">Seven Deadly Murals</a>
@@ -115,7 +116,7 @@
           
         <div class="four columns" >
         <a href="videos.html#explore" > <img src="images/video_images/mcexplore_thumb.png" class="u-full-width"/>  </a>
-        <h5>[?]</h5>
+        <h5>Endless Adventures</h5>
         
          </div>
 
