--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
   <a class="navbar-link" href="videos.html"> Videos</a> &nbsp;
   <div class="dropdown">
     <a class="dropbtn" href="digitalart.html"> Digital Art</a> &nbsp;
-      <div class="dropdown-content">
+      <div id="stat" class="dropdown-content">
         <a href="digitalart.html">Digital Works</a>
         <a href="memories.html">Childhood.exe</a>
         <a href="sdm.html">Seven Deadly Murals</a>
