--- a/coding.html
+++ b/coding.html
@@ -60,8 +60,8 @@
   <a class="navbar-link" href="index.html">Home</a> &nbsp;
   <a class="navbar-link" href="videos.html"> Videos</a> &nbsp;
   <div class="dropdown">
-  <a class="dropbtn" href="digitalart.html"> Photoshop & Illustrator</a> &nbsp;
-    <div class="dropdown-content">
+  <a class="dropbtn" href="digitalart.html"> Digital Art</a> &nbsp;
+    <div id="stat" class="dropdown-content">
       <a href="digitalart.html">Digital Works</a>
       <a href="memories.html">Childhood.exe</a>
       <a href="sdm.html">Seven Deadly Murals</a>
