--- a/memories.html
+++ b/memories.html
@@ -59,8 +59,8 @@
   <a class="navbar-link" href="index.html">Home</a> &nbsp;
   <a class="navbar-link" href="videos.html"> Videos</a> &nbsp;
   <div class="dropdown">
-    <a class="dropbtn" href="digitalart.html"> Photoshop & Illustrator</a> &nbsp;
-      <div class="dropdown-content">
+    <a class="dropbtn" href="digitalart.html"> Digital Art</a> &nbsp;
+      <div id="stat" class="dropdown-content">
         <a href="digitalart.html">Digital Works</a>
         <a href="memories.html">Childhood.exe</a>
         <a href="sdm.html">Seven Deadly Murals</a>
@@ -79,7 +79,7 @@
 <!-- NOTE!: For each row section make sure your column divs add up to 12. so 4+8, 6+6, 2+10, etc.-->
 
 <h1>Childhood.exe</h1>
-<h5>(2024)</h5>
+<h5>(Spring 2024)</h5>
   <p> 
     Childhood.exe is a concept created in Photoshop for a point-and-click adventure game, themed around VHS and the early 2000s internet combined with the dreamcore aesthetic.
     Using the mouse and keyboard, the player can hover and interact with various objects to travel through childhood memories in a non-linear fashion and enter mini-games based on things we used to do as kids.
