--- a/sdm.html
+++ b/sdm.html
@@ -61,8 +61,8 @@
   <a class="navbar-link" href="index.html">Home</a> &nbsp;
   <a class="navbar-link" href="videos.html"> Videos</a> &nbsp;
   <div class="dropdown">
-    <a class="dropbtn" href="digitalart.html"> Photoshop & Illustrator</a> &nbsp;
-      <div class="dropdown-content">
+    <a class="dropbtn" href="digitalart.html"> Digital Art</a> &nbsp;
+      <div id="stat" class="dropdown-content">
         <a href="digitalart.html">Digital Works</a>
         <a href="memories.html">Childhood.exe</a>
         <a href="sdm.html">Seven Deadly Murals</a>
@@ -81,7 +81,7 @@
 <!-- NOTE!: For each row section make sure your column divs add up to 12. so 4+8, 6+6, 2+10, etc.-->
 
 <h1>The Seven Deadly Murals</h1>
-<h5>(2024)</h5>
+<h5>(Spring 2024)</h5>
   <p> 
     The Seven Deadly Murals are a collection of stained glass styled works, each representing one of the seven deadly sins. 
     These were first made from sketch and then translated into Illustrator. 
