--- a/videos.html
+++ b/videos.html
@@ -61,8 +61,8 @@
   <a class="navbar-link" href="index.html">Home</a> &nbsp;
   <a class="navbar-link" href="videos.html"> Videos</a> &nbsp;
   <div class="dropdown">
-    <a class="dropbtn" href="digitalart.html"> Photoshop & Illustrator</a> &nbsp;
-      <div class="dropdown-content">
+    <a class="dropbtn" href="digitalart.html"> Digital Art</a> &nbsp;
+      <div id="stat" class="dropdown-content">
         <a href="digitalart.html">Digital Works</a>
         <a href="memories.html">Childhood.exe</a>
         <a href="sdm.html">Seven Deadly Murals</a>
@@ -123,7 +123,7 @@
         
        <!-- The column for artist statement and the link-->
      <div class="seven columns">    
-         <h5> <strong>Blocky and City Adventures</strong> (Fall 2024) </h5>
+         <h5> <strong>Endless Adventures</strong> (Fall 2024) </h5>
 		<p>
       A showcase of my adventures in modded Minecraft and with friends in real-life.
       The Minecraft footage was recorded in-game using the Replay Mod feature and real-life footage my phone, together edited in Premiere Pro.
@@ -282,7 +282,7 @@
    
   <!-- The column for artist statement and the link-->
 <div class="seven columns">    
-    <h5> <strong>Navi Fly</strong> (Spring 2024) </h5> 
+    <h5> <strong>Navi Flight</strong> (Spring 2024) </h5> 
 
 <p>
  
