--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
 <style>
   h1,h6 {text-align: center; color: rgb(255, 211, 145);}
   h3 {color:rgb(255, 211, 145)}
-  h5 {color:rgb(255, 211, 145); margin-left: -45px;}
+  p {color:rgb(255, 211, 145); margin-left: -45px; font-size: 16px; text-indent: 30px;}
   #stat {
     background-color: rgb(83, 92, 255);
   }
@@ -26,7 +26,7 @@
 
   <!-- Basic Page Needs –––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>KatherineXArtPortfolio</title>
+  <title>Katherine Xu - About</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -96,10 +96,22 @@
         <div class="six columns">
           <h3 id="pad"><strong>\ Hello, world! \</strong><br></h3>
           
-          <h5>
-          
+          <p>
+            My name is Katherine Xu and I am a student currently enrolled in the DMA program at San Jose State University. <br>
+            Growing up playing video games and watching cartoons, I have always been deeply inspired by the endless possibilities that a person could create in the digital genre, creating narratives and stories placed in fantastical worlds without limitations. 
+            These worlds that people have poured their absolute heart, soul, and imagination into carefully crafting and fleshing out are extraordinary to me. 
+          </p>
+          <p>
+            I love making characters, designs, and world-building inspired by the media I watch and play, and I always have stories being written in my head that I wish to share with others.<br>
+            Now at SJSU, I’ve been expanding my scope of art to further fulfill and flesh out the worlds I made, from traditional art to digital art, video, graphic design, and hopefully game design and development as well! 
+            Aside from drawing and gaming, I create videos (often about Minecraft) and make designs, as I’ve been utilizing Photoshop and Illustrator and am making posts and stickers for AR/VR Club. 
+            I’ve never been picky about the media I consume, hopping from one fanbase to another each week, and I love to play about every genre of game imaginable, from open-world to platformers, roguelikes, and rhythm games. 
+            The same can also be applied to music and food!<br>
+          </p>
+          <p>
+            As for now, my main goal as a DMA student is to hone in on my interests and passions as an artist to turn my imaginable into life and someday inspire others with my works the same way that I was inspired.            
 
-          </h5>
+          </p>
 
         </div>
 
