--- a/coding.html
+++ b/coding.html
@@ -22,7 +22,7 @@
 
   <!-- Basic Page Needs –––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>KatherineXCodeProjects</title>
+  <title>Katherine Xu - Coding</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
