--- a/digitalart.html
+++ b/digitalart.html
@@ -24,7 +24,7 @@
 
   <!-- Basic Page Needs –––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>KatherineXVideoProjects</title>
+  <title>Katherine Xu - Digital Art</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -258,7 +258,7 @@
   This piece was inspired by a horror game themed around liminal spaces and the popular Backrooms concept.
   I made this in Illustrator and Photoshop and wanted to creat a sense of dread, abandonment, and lonliness 
   as a lone figure wanders through an empty city with nothing but a flickering billboard affirming his worst fears.
-   <br>
+   <br id="leaves">
  
 
     
