--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <!-- Basic Page Needs –––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>KatherineXArtPortfolio</title>
+  <title>Katherine Xu - Homepage</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -56,7 +56,7 @@
 
    <div class="row section">
   <header id="header" class="twelve columns">
-    <h3>Main Page</h3>
+    <h3>Main Page - Featured Works</h3>
       
 <div id="stat" class="statement_text"> 
   <a class="navbar-link" href="index.html">Home</a> &nbsp;
@@ -166,7 +166,7 @@
 
       <div class="four columns" >
     
-        <a href="digitalart.html" > <img src="images/digitalart_images/kxTreeofEyes.jpg" class="u-full-width"/>  </a>
+        <a href="digitalart.html#leaves" > <img src="images/digitalart_images/kxTreeofEyes.jpg" class="u-full-width"/>  </a>
         <h5>Suffering Leaves Suffering Leaves</h5>
 
       </div>
