--- a/memories.html
+++ b/memories.html
@@ -22,7 +22,7 @@
 
   <!-- Basic Page Needs –––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>KXChildhoodexe</title>
+  <title>Katherine Xu - Childhoodexe</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
