--- a/sdm.html
+++ b/sdm.html
@@ -23,7 +23,7 @@
 
   <!-- Basic Page Needs –––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>kxDeadlyMurals</title>
+  <title>Katherine Xu - Seven Deadly Murals</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
