--- a/videos.html
+++ b/videos.html
@@ -23,7 +23,7 @@
 
   <!-- Basic Page Needs –––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>KatherineXVideoProjects</title>
+  <title>Katherine Xu - Videos</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
