--- a/p5_code/michaelsoftpaint/index.html
+++ b/p5_code/michaelsoftpaint/index.html
@@ -2,11 +2,8 @@
 <head>
   <meta charset="UTF-8">
   <script language="javascript" type="text/javascript" src="../lib/p5.min.js"></script>
-  <!-- uncomment lines below to include extra p5 libraries -->
-	<!--<script language="javascript" src="../lib/p5.dom.min.js"></script>-->
-  <!--<script language="javascript" src="../lib/p5.sound.min.js"></script>-->
   <script language="javascript" type="text/javascript" src="sketch.js"></script>
-  <!-- this line removes any default padding and style. you might only need one of these values set. -->
+  
   <style>
     body {padding: 50; margin: 50;
   	background-color: #0c7e82;
@@ -38,9 +35,10 @@
    q - Cat Brush <br />
    w - Star Brush <br />
    0 - Erase <br />
-   x - Reset Canvas &nbsp; k - Increase Brush Size<br />
-   p - Print Canvas &nbsp; j - Decrease Brush Size
+   x - Reset Canvas &nbsp; k - Increase Brush Size by 1<br />
+   p - Print Canvas &nbsp; j - Decrease Brush Size by 1
 </p>
+
 
 </body>
 </html>
