--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
     background-image: url("images/backgrounds/cherrybloss_back.png");
     background-repeat: repeat;
     background-attachment: fixed;
-    background-size: 950px 730px;
+    background-size: cover;
   }
 </style>
 
