--- a/coding.html
+++ b/coding.html
@@ -155,7 +155,7 @@
         
        <!-- The column for artist statement and the link-->
      <div class="seven columns">    
-         <h5> <strong>Phrog Pond</strong> (2025) </h5>
+         <h5> <strong>Phrog Pond</strong> (Spring 2025) </h5>
 		<p>
         
       A sketch where you can play with a collection of cute flower frogs inspired by an artist I watch online.
