--- a/memories.html
+++ b/memories.html
@@ -81,11 +81,11 @@
 <h1>Childhood.exe</h1>
 <h5>(Spring 2024)</h5>
   <p> 
-    Childhood.exe is a concept created in Photoshop for a point-and-click adventure game, themed around VHS and the early 2000s internet combined with the dreamcore aesthetic.
+    Childhood.exe is a concept created in Photoshop for a point-and-click adventure game, themed around VHS and the early 2000s internet aesthetic combined with the dreamcore aesthetic.
     Using the mouse and keyboard, the player can hover and interact with various objects to travel through childhood memories in a non-linear fashion and enter mini-games based on things we used to do as kids.
     These include drawing on the car window on a rainy day, controlling your imaginary character doing parkour along the highway, and combining drinks with a soda machine.
-    Each area represents a moment or area associated with childhood, as the player travels through arcades, playgrounds, bedrooms, classrooms, living rooms, fast-food places, and more. 
-    Childhood.exe showcases the gives players the ability relive those sweet nostalgic moments we all experienced as kids and connect with them again, even if they're faded.
+    Each area represents a moment associated with childhood, as the player travels through arcades, playgrounds, bedrooms, classrooms, living rooms, fast-food places, and more. 
+    Childhood.exe showcases the ability for players to relive those sweet nostalgic moments we all experienced as kids that have shaped us into who we are today, and connect with them again, even if they're faded.
   </p>
 
       <!-- Start Row //// -->
