--- a/sdm.html
+++ b/sdm.html
@@ -83,12 +83,11 @@
 <h1>The Seven Deadly Murals</h1>
 <h5>(Spring 2024)</h5>
   <p> 
-    The Seven Deadly Murals are a collection of stained glass styled works, each representing one of the seven deadly sins. 
-    These were first made from sketch and then translated into Illustrator. 
-    The murals are a combination of modern and traditional design, referencing stained glass often seen in churches and monasteries while also containing symbol and imagery that reflect the sins of in the past and the modern day.
+    The Seven Deadly Murals are a collection of stained glass styled works created in Illustrator, each representing one of the seven deadly sins. 
+    The murals are a combination of modern and traditional design, referencing stained glass often seen in churches and monasteries while also containing symbol and imagery that reflect the sins of the past and the modern day.
     Each mural has its own unique theme and contain either the respective plants, animals, and colors that many people associate each sin with. 
     Some designs are more explicit while others are more abstract in representing their specific sin, reflecting the numerous forms each sin can take.
-    Together, the murals reflect how these deadly vices still remain relevent in society today, with some that have changed to take on today's society while others never changed at all.
+    Together, the murals reflect how these deadly vices still remain relevent in society today, with some that have changed and evolved while others have never changed at all.
   </p>
 
       <!-- Start Row //// -->
