--- a/videos.html
+++ b/videos.html
@@ -126,8 +126,8 @@
          <h5> <strong>Endless Adventures</strong> (Fall 2024) </h5>
 		<p>
       A showcase of my adventures in modded Minecraft and with friends in real-life.
-      The Minecraft footage was recorded in-game using the Replay Mod feature and real-life footage my phone, together edited in Premiere Pro.
-      The video is a love-letter to the game as a source of nostalgia and fun, and to my friends for all the experiences we shared.
+      The Minecraft footage was recorded in-game using the Replay Mod feature and real-life footage using my phone, together edited in Premiere Pro.
+      The video is a love-letter to the game as a source of nostalgia and memories it has created, and to my friends for all the experiences we shared.
       <br>
     
     
@@ -159,8 +159,7 @@
 <p id="hallows">
  
    Features the random adventures and antics of a small cat named Cattie.
-   Made using Photoshop and edited in After Effects.
-   This video was a fun project to practice camera tracking and integrating art with captured footage.
+   Made using Photoshop and edited in After Effects, this video was a fun project to practice camera tracking and integrating art with captured footage.
    <br>
  
 
@@ -191,8 +190,7 @@
 <p>
  
    A story of me and my friend trick-or-treating on a fateful Halloween night.
-   The footage was created in Photoshop and edited in After Effects.
-   Created as a fun skit with me and my friend as one of our favorite video game characters.
+   The footage was created in Photoshop and edited in After Effects, and was created as a fun skit with me and my friend dressed as our favorite video game characters.
    <br>
  
 
@@ -257,7 +255,7 @@
  
    Found footage of an anomalous entity within my laptop, inspired by an online horror series.
    Recorded on phone and edited in Photoshop and After Effects.
-   This video was a way to practice masking and camera tracking, but is also a reflection for my love of digital and psychological horror media.
+   This video was a way to practice masking and camera tracking, but is reflects my interest in digital and psychological horror media.
    <br>
  
 
