--- a/videos.html
+++ b/videos.html
@@ -255,7 +255,7 @@
  
    Found footage of an anomalous entity within my laptop, inspired by an online horror series.
    Recorded on phone and edited in Photoshop and After Effects.
-   This video was a way to practice masking and camera tracking, but is reflects my interest in digital and psychological horror media.
+   This video was a way to practice masking and camera tracking, and I had fun making it themed around my favorite digital and psychological horror media.
    <br>
  
 
