--- a/videos.html
+++ b/videos.html
@@ -190,7 +190,7 @@
 <p>
  
    A story of me and my friend trick-or-treating on a fateful Halloween night.
-   The footage was created in Photoshop and edited in After Effects, and was created as a fun skit with me and my friend dressed as our favorite video game characters.
+   The footage was created in Photoshop and edited in After Effects, and was created as a fun skit with me and my friend dressed as our favorite video game characters!
    <br>
  
 
