--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
 
 <style>
-  h1,h5 {text-align: center; color: rgb(255, 211, 145);}
+  h1 {text-align: center; color: rgb(255, 211, 145);}
   h3 {color:rgb(255, 211, 145)}
   p {color:rgb(255, 211, 145); margin-left: -45px; font-size: 16px; text-indent: 30px;}
   #stat {
@@ -111,7 +111,8 @@
           <p>
             As for now, my main goal as a DMA student is to hone in on my passions as an artist to turn my imagination into life and someday inspire others with my works the same way that I was inspired.
           </p>
-          <h5><a href="mailto:someone@example.com">Contact Me!</a></h5>
+          
+          <h5 class="center"><img src="images/homepage_images/envelope.png" width="25px" /></a>&nbsp;<a href="mailto:katherineyzxu@gmail.com">Contact Me!</a></h5>
 
         </div>
 
