--- a/coding.html
+++ b/coding.html
@@ -158,7 +158,7 @@
          <h5> <strong>Phrog Pond</strong> (Spring 2025) </h5>
 		<p>
         
-      A sketch where you can play with a collection of cute flower frogs inspired by animator and artist Shar.
+      A sketch where you can play with a collection of cute flower frogs inspired by an animator and artist called Shar.
       Made in js, where you can change various aspects and behaviors of the phrogs via key presses.
       This was a fun project and shows my love for everything cutesy and small!
       <br>
