--- a/digitalart.html
+++ b/digitalart.html
@@ -161,7 +161,7 @@
  
   A content and happy cat floating on some colorful bubbles.
   This project was created in Blender as an introduction to lighting and reflections, and the cat was added in afterwards in Photoshop as a finishing touch.
-  It was fun experimenting with coloring and I think bubbles were a perfect candidate for that.
+  It was fun experimenting with coloring and I think bubbles were a perfect candidate for that!
 
    <br>
  
@@ -282,13 +282,13 @@
    
   <!-- The column for artist statement and the link-->
 <div class="seven columns">    
-    <h5> <strong>Suffering Leaves Suffering Leaves</strong> (Spring 2024) </h5> 
+    <h5> <strong>Suffering Leaves Suffering Leaves</strong><br> (Spring 2024) </h5> 
 
 <p>
  
-  Created in Photoshop, this pice was themed around pain and suffering as a grotesque, living tree pierces out of the figure's body, causing them to bleed and feed
+  Created in Photoshop, this piece was themed around pain and suffering as a grotesque, living tree pierces out of the figure's body, causing them to bleed which feeds
   the tree even more in a continous cycle of blood and growth. 
-  The name of this project was inspired by a video game with a similar premise of blood as fuel called Ultrakill.
+  The name of this project was inspired by a video game with a similar premise of blood called Ultrakill.
    <br>
  
 
@@ -319,7 +319,7 @@
 <p>
  
   This piece presents a man standing before an abstract, incomprehensible being made of flowers and tendrils, creating a sense of eldritch horror.
-  Most of the objects used in this project were taken using my phone around campus, selecting and combining them into this biblical horror-themed piece.
+  Most of the objects used in this project were taken using my phone around campus, selecting and combining them in Photoshop into this biblical horror-themed piece.
  
 
     
@@ -348,7 +348,7 @@
 
 <p>
  
-  This project was also created with theme of dread and abandonment, featuring a little girl lost in a forest at night, with ominous shadows and whispers that tell her that she won't ever leave
+  This Photoshop project was also created with theme of dread and abandonment, featuring a little girl lost in a forest at night, with ominous shadows and whispers that tell her that she won't ever leave
   the endless woods.
  
 
