--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
 <style>
-  h1,h5,h6 {text-align: center; color: rgb(255, 211, 145);}
+  h1,h5 {text-align: center; color: rgb(255, 211, 145);}
   h3 {color:rgb(255, 211, 145)}
   #stat {
     background-color: rgb(83, 92, 255);
@@ -81,7 +81,7 @@
      
 <!-- NOTE!: For each row section make sure your column divs add up to 12. so 4+8, 6+6, 2+10, etc.-->
 
-<h1><strong>Katherine Xu - DMA Portfolio</strong><br>Welcome!</h1><br>
+<h1><strong>\ Katherine Xu Art \</strong><br>Welcome!</h1><br>
 
 
       <!-- Start Rows //// -->
