--- a/digitalart.html
+++ b/digitalart.html
@@ -17,7 +17,7 @@
     background-image: url("images/backgrounds/auroranova_back.png");
     background-repeat: repeat;
     background-attachment: fixed;
-    background-size: 910px 730px;
+    background-size: cover;
   }
   #pad {padding-top: 100px;}
 </style>
