--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     background-image: url("images/backgrounds/cherrybloss_back.png");
     background-repeat: repeat;
     background-attachment: fixed;
-    background-size: 950px 730px;
+    background-size: cover;
   }
 </style>
 
