--- a/videos.html
+++ b/videos.html
@@ -17,7 +17,7 @@
     background-image: url("images/backgrounds/lake_back.png");
     background-repeat: repeat;
     background-attachment: fixed;
-    background-size: 900px 730px;
+    background-size: cover;
   }
 </style>
 
