--- a/coding.html
+++ b/coding.html
@@ -16,7 +16,7 @@
     background-image: url("images/backgrounds/paint_back.png");
     background-repeat:repeat;
     background-attachment: fixed;
-    background-size: 762px 730px;
+    background-size: cover;
     }
   </style>
 
