--- a/p5_code/michaelsoftbinbows/index.html
+++ b/p5_code/michaelsoftbinbows/index.html
@@ -36,7 +36,7 @@
 
 <h1> Welcome to Michaelsoft Binbows 95! </h1>
 <p>
-Click on our various fun applications to get started! Open console log for additional help with applications.
+Click on our various fun applications to get started! Open inspect then console log for additional help with applications.
 </p>
  
 </body>
